--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.1.3",
     "dotenv": "^10.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.4",
     "react-reveal": "^1.2.2",
